--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quest HTML-CSS Básico</title>
-</head>
-<body>
-    <h1>Tabela3</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Quest HTML-CSS Básico</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <h1>Quest HTML-CSS Básico</h1>
+
+        <h2 class="titulo">Moda</h2>
+        <table class="tabela-moda tabela">
+            <tr>
+                <th>Produto</th>
+                <th>Tamanho</th>
+                <th>Valor</th>
+            </tr>
+            <tr>
+                <td>Camiseta</td>
+                <td>M</td>
+                <td>R$ 49,00</td>
+            </tr>
+            <tr>
+                <td>Tênis</td>
+                <td>42</td>
+                <td>R$ 5,00</td>
+            </tr>
+        </table>
+
+        <h2 class="titulo">Casa</h2>
+        <table class="tabela-casa tabela">
+            <tr>
+                <th>Produto</th>
+                <th>Valor</th>
+            </tr>
+            <tr>
+                <td>Sofá</td>
+                <td>R$ 1.200,00</td>
+            </tr>
+            <tr>
+                <td>Televisão</td>
+                <td>R$ 5.000,00</td>
+            </tr>
+        </table>
+    </body>
 </html>
