Adicionado novos valores

--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>Quest HTML-CSS Básico</h1>
+        <h1>Desafio Tabela Estilizada</h1>
 
         <h2 class="titulo">Moda</h2>
         <table class="tabela-moda tabela">
             <tr>
                 <th>Produto</th>
                 <th>Tamanho</th>
+                <th>Cor</th>
                 <th>Valor</th>
             </tr>
             <tr>
-                <td>Camiseta</td>
-                <td>M</td>
-                <td>R$ 49,00</td>
+                <td>Jaqueta</td>
+                <td>G</td>
+                <td>Preta</td>
+                <td>R$ 179,00</td>
             </tr>
             <tr>
                 <td>Tênis</td>
-                <td>42</td>
-                <td>R$ 5,00</td>
+                <td>40</td>
+                <td>Vermelho</td>
+                <td>R$ 199,00</td>
             </tr>
         </table>
 
@@ -33,15 +36,23 @@
         <table class="tabela-casa tabela">
             <tr>
                 <th>Produto</th>
+                <th>Cômodo</th>
                 <th>Valor</th>
             </tr>
             <tr>
                 <td>Sofá</td>
-                <td>R$ 1.200,00</td>
+                <td>Sala de estar</td>
+                <td>R$ 1.299,00</td>
             </tr>
             <tr>
                 <td>Televisão</td>
-                <td>R$ 5.000,00</td>
+                <td>Sala de estar</td>
+                <td>R$ 3.499,00</td>
+            </tr>
+            <tr>
+                <td>Fogão</td>
+                <td>Cozinha</td>
+                <td>R$ 599,00</td>
             </tr>
         </table>
     </body>
